Updated backend API so that deleting a conneciton is possible
